# ap-games

./: .bumpversion.cfg  .gitignore  .gitlint  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tictactoe.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
scripts/: check_version.py  clean_release.py
src/ap_games/: __init__.py  __main__.py  ap_collections.py  ap_constants.py  ap_types.py  ap_typing.py  cli.py  config.ini  log.py  settings.py
src/ap_games/game/: game_base.py  reversi.py  tictactoe.py
src/ap_games/gameboard/: gameboard.py
src/ap_games/player/: ai_player.py  human_player.py  player.py  player.pyi
tests/: .pydocstyle.ini
tests/game/: conftest.py  test_reversi.py
tests/gameboard/: conftest.py  test_gameboard.py
tests/player/: conftest.py  test_player.py
