[metadata]
name = ap_games
version = 0.0.1b3
description = Games Tic-Tac-Toe and Reversi with CLI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aplatkouski/ap-games
author = Artsiom Platkouski
author_email = komukc.apt@gmail.com
license = MIT
license_file = LICENSE.txt
license_files = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Board Games
    Topic :: Software Development :: Libraries :: Python Modules
keywords = board game, console game, tic-tac-toe, reversi
project_urls =
    Bug Reports=https://github.com/aplatkouski/ap-games/issues
    Source=https://github.com/aplatkouski/ap-games

[options]
packages =
    find:
py_modules = ap_games
python_requires = >=3.8, <4
include_package_data = true
package_dir =
    =src
setup_requires =
    setuptools_scm
zip_safe = false

[options.entry_points]
console_scripts =
    ap_games = ap_games.cli:cli

[options.package_data]
ap_games =
    py.typed
game =
    py.typed
gameboard =
    py.typed
player =
    py.typed

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[mypy]
python_version = 3.8
platform = linux
show_column_numbers = true
follow_imports = normal
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
warn_no_return = false
